<resources>
    <string name="app_name">Challenge Lifecycle</string>
    <string name="item_list">Daftar Belanja</string>
    <string name="add_item">Add Item</string>
    <string name="choose_an_item">Pilih Item</string>
    <string name="apel">Apel</string>
    <string name="mangga">Mangga</string>
    <string name="nanas">Nanas</string>
    <string name="beras">Beras</string>
    <string name="gula">Gula</string>
    <string name="merica">Merica</string>
    <string name="sosis">Sosis</string>
    <string name="tepung">Tepung</string>
    <string name="susu">Susu</string>
    <string name="minyak">Minyak</string>
</resources>